[gd_scene load_steps=46 format=2]

[ext_resource path="res://VT323-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/Puzzle 2/RNA_Transcription.png" type="Texture" id=2]
[ext_resource path="res://Assets/Puzzle 2/Label - Nucleotides.png" type="Texture" id=3]
[ext_resource path="res://Assets/Puzzle 2/Label - DNA.png" type="Texture" id=4]
[ext_resource path="res://Assets/Puzzle 2/Label - mRNA.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Puzzle 2/Nucleotide.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/Puzzle 2/blank.png" type="Texture" id=7]
[ext_resource path="res://Scenes/Puzzle 2/Slot.gd" type="Script" id=8]
[ext_resource path="res://Scenes/Puzzle 2/Matching.gd" type="Script" id=9]
[ext_resource path="res://Assets/Puzzle 2/arrow_left.png" type="Texture" id=10]
[ext_resource path="res://Assets/Puzzle 2/arrow_left_click.png" type="Texture" id=11]
[ext_resource path="res://Assets/Puzzle 2/arrow_right_click.png" type="Texture" id=12]
[ext_resource path="res://Assets/Puzzle 2/arrow_right.png" type="Texture" id=13]
[ext_resource path="res://Scenes/Puzzle 2/Label.tscn" type="PackedScene" id=14]
[ext_resource path="res://Assets/Puzzle 2/Trash_can.png" type="Texture" id=15]
[ext_resource path="res://Assets/Puzzle 2/continue_btn_click.png" type="Texture" id=16]
[ext_resource path="res://Assets/Puzzle 2/continue_btn.png" type="Texture" id=17]
[ext_resource path="res://Assets/Puzzle 2/Sound - failure.wav" type="AudioStream" id=18]
[ext_resource path="res://Assets/Puzzle 2/Sound - success.wav" type="AudioStream" id=19]
[ext_resource path="res://Assets/click.wav" type="AudioStream" id=20]
[ext_resource path="res://Assets/Puzzle 2/RNA_Strand.png" type="Texture" id=21]
[ext_resource path="res://Assets/Puzzle 2/DNA_Strand.png" type="Texture" id=22]
[ext_resource path="res://Assets/trash_bin.wav" type="AudioStream" id=23]
[ext_resource path="res://Assets/keyboard typing.wav" type="AudioStream" id=24]
[ext_resource path="res://Assets/Puzzle 3/x_click.png" type="Texture" id=25]
[ext_resource path="res://Assets/Puzzle 3/x.png" type="Texture" id=26]
[ext_resource path="res://Assets/Puzzle 3/summary_btn_click.png" type="Texture" id=27]
[ext_resource path="res://Assets/Puzzle 3/summary_btn.png" type="Texture" id=28]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.054902, 0.0784314, 0.109804, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.423529, 0.631373, 0.796078, 1 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
expand_margin_left = 10.0
expand_margin_right = 10.0
expand_margin_top = 10.0
expand_margin_bottom = 10.0

[sub_resource type="DynamicFont" id=3]
size = 25
extra_spacing_char = 1
extra_spacing_space = 1
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 200, 200 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.423529, 0.631373, 0.796078, 0 )

[sub_resource type="DynamicFont" id=6]
size = 20
extra_spacing_char = 1
extra_spacing_space = 1
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=7]
resource_name = "ContinueSummaryButtonFadeIn"
tracks/0/type = "value"
tracks/0/path = NodePath("ContinueButton:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SummaryButton:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "FadeOut"

[sub_resource type="Animation" id=9]
length = 6.0
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("InstructionLabel:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5, 6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0, 1.0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "sayDialog"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "startKeyboardTyping"
}, {
"args": [  ],
"method": "stopKeyboardTyping"
} ]
}

[sub_resource type="Animation" id=10]
length = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("ContinueButton:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SummaryButton:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="StyleBoxTexture" id=11]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 200, 200 )

[sub_resource type="StyleBoxTexture" id=12]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 200, 200 )

[sub_resource type="StyleBoxTexture" id=13]
texture = ExtResource( 15 )
region_rect = Rect2( 0, 0, 2000, 2000 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.423529, 0.631373, 0.796078, 1 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="DynamicFont" id=15]
size = 28
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=16]
size = 28
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=17]
size = 25
font_data = ExtResource( 1 )

[node name="Matching" type="Node2D"]
script = ExtResource( 9 )

[node name="Background" type="Panel" parent="."]
margin_left = -118.0
margin_top = -66.8909
margin_right = 1139.0
margin_bottom = 703.109
rect_pivot_offset = Vector2( 323.227, 359.588 )
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DNATranscriptionLabel" type="TextureRect" parent="Background"]
margin_left = 114.0
margin_top = 49.0
margin_right = 373.0
margin_bottom = 168.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DNALabel" type="TextureRect" parent="Background"]
margin_left = 393.0
margin_top = 144.0
margin_right = 544.0
margin_bottom = 226.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mRNALabel" type="TextureRect" parent="Background"]
margin_left = 391.782
margin_top = 235.6
margin_right = 549.782
margin_bottom = 327.6
texture = ExtResource( 5 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NucleotidesLabel" type="TextureRect" parent="Background"]
margin_left = 396.0
margin_top = 395.958
margin_right = 715.0
margin_bottom = 549.958
texture = ExtResource( 3 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DNABackground" type="Label" parent="Background"]
margin_left = 534.0
margin_top = 151.0
margin_right = 1088.0
margin_bottom = 217.0
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mRNABackground" type="Label" parent="Background"]
margin_left = 534.0
margin_top = 249.0
margin_right = 1088.0
margin_bottom = 307.0
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DNATemplate" type="GridContainer" parent="Background"]
margin_left = 539.995
margin_top = 148.308
margin_right = 1109.99
margin_bottom = 219.308
custom_constants/hseparation = -8
columns = 100
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Background/DNATemplate"]
margin_right = 75.0
margin_bottom = 70.0
rect_min_size = Vector2( 75, 70 )
custom_styles/panel = SubResource( 4 )

[node name="Label" parent="Background/DNATemplate/Panel" instance=ExtResource( 14 )]

[node name="Panel2" type="Panel" parent="Background/DNATemplate"]
margin_left = 67.0
margin_right = 142.0
margin_bottom = 70.0
rect_min_size = Vector2( 75, 70 )
custom_styles/panel = SubResource( 4 )

[node name="Label" parent="Background/DNATemplate/Panel2" instance=ExtResource( 14 )]

[node name="Panel3" type="Panel" parent="Background/DNATemplate"]
margin_left = 134.0
margin_right = 209.0
margin_bottom = 70.0
rect_min_size = Vector2( 75, 70 )
custom_styles/panel = SubResource( 4 )

[node name="Label" parent="Background/DNATemplate/Panel3" instance=ExtResource( 14 )]

[node name="Panel4" type="Panel" parent="Background/DNATemplate"]
margin_left = 201.0
margin_right = 276.0
margin_bottom = 70.0
rect_min_size = Vector2( 75, 70 )
custom_styles/panel = SubResource( 4 )

[node name="Label" parent="Background/DNATemplate/Panel4" instance=ExtResource( 14 )]

[node name="Panel5" type="Panel" parent="Background/DNATemplate"]
margin_left = 268.0
margin_right = 343.0
margin_bottom = 70.0
rect_min_size = Vector2( 75, 70 )
custom_styles/panel = SubResource( 4 )

[node name="Label" parent="Background/DNATemplate/Panel5" instance=ExtResource( 14 )]

[node name="Panel6" type="Panel" parent="Background/DNATemplate"]
margin_left = 335.0
margin_right = 410.0
margin_bottom = 70.0
rect_min_size = Vector2( 75, 70 )
custom_styles/panel = SubResource( 4 )

[node name="Label" parent="Background/DNATemplate/Panel6" instance=ExtResource( 14 )]

[node name="Panel7" type="Panel" parent="Background/DNATemplate"]
margin_left = 402.0
margin_right = 477.0
margin_bottom = 70.0
rect_min_size = Vector2( 75, 70 )
custom_styles/panel = SubResource( 4 )

[node name="Label" parent="Background/DNATemplate/Panel7" instance=ExtResource( 14 )]

[node name="Panel8" type="Panel" parent="Background/DNATemplate"]
margin_left = 469.0
margin_right = 544.0
margin_bottom = 70.0
rect_min_size = Vector2( 75, 70 )
custom_styles/panel = SubResource( 4 )

[node name="Label" parent="Background/DNATemplate/Panel8" instance=ExtResource( 14 )]

[node name="InstructionLabel" type="Label" parent="."]
margin_left = 26.0
margin_top = 94.0
margin_right = 275.0
margin_bottom = 575.0
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
autowrap = true
percent_visible = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InstructionCountLabel" type="Label" parent="InstructionLabel"]
margin_left = 114.827
margin_top = 447.064
margin_right = 144.827
margin_bottom = 469.064
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
text = "1/4"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftInstructionButton" type="TextureButton" parent="InstructionLabel"]
margin_left = -3.31763
margin_top = 438.574
margin_right = 44.6824
margin_bottom = 481.574
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 11 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightInstructionButton" type="TextureButton" parent="InstructionLabel"]
margin_left = 211.0
margin_top = 438.333
margin_right = 252.0
margin_bottom = 481.333
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 12 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/ContinueSummaryButtonFadeIn = SubResource( 7 )
anims/FadeOut = SubResource( 8 )
anims/PlayCurrInstruction = SubResource( 9 )
anims/resetAnimations = SubResource( 10 )

[node name="Control" type="Control" parent="."]
margin_left = 313.0
margin_top = 62.0
margin_right = 1010.0
margin_bottom = 580.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Nucleotides" type="GridContainer" parent="Control"]
margin_left = -8.62615
margin_top = 393.64
margin_right = 436.373
margin_bottom = 488.64
custom_constants/hseparation = 0
columns = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UnMoveable1" type="Panel" parent="Control/Nucleotides"]
margin_right = 95.0
margin_bottom = 95.0
rect_min_size = Vector2( 95, 95 )
custom_styles/panel = SubResource( 11 )
script = ExtResource( 8 )

[node name="Adenine" parent="Control/Nucleotides/UnMoveable1" instance=ExtResource( 6 )]

[node name="UnMoveable2" type="Panel" parent="Control/Nucleotides"]
margin_left = 95.0
margin_right = 190.0
margin_bottom = 95.0
rect_min_size = Vector2( 95, 95 )
custom_styles/panel = SubResource( 11 )
script = ExtResource( 8 )

[node name="Cytosine" parent="Control/Nucleotides/UnMoveable2" instance=ExtResource( 6 )]

[node name="UnMoveable3" type="Panel" parent="Control/Nucleotides"]
margin_left = 190.0
margin_right = 285.0
margin_bottom = 95.0
rect_min_size = Vector2( 95, 95 )
custom_styles/panel = SubResource( 11 )
script = ExtResource( 8 )

[node name="Guanine" parent="Control/Nucleotides/UnMoveable3" instance=ExtResource( 6 )]

[node name="UnMoveable4" type="Panel" parent="Control/Nucleotides"]
margin_left = 285.0
margin_right = 380.0
margin_bottom = 95.0
rect_min_size = Vector2( 95, 95 )
custom_styles/panel = SubResource( 11 )
script = ExtResource( 8 )

[node name="Uracil" parent="Control/Nucleotides/UnMoveable4" instance=ExtResource( 6 )]

[node name="mRNA" type="GridContainer" parent="Control"]
margin_left = 107.0
margin_top = 108.0
margin_right = 659.0
margin_bottom = 185.0
custom_constants/hseparation = -8
columns = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="N1" type="Panel" parent="Control/mRNA"]
margin_right = 75.0
margin_bottom = 80.0
rect_min_size = Vector2( 75, 80 )
custom_styles/panel = SubResource( 12 )
script = ExtResource( 8 )

[node name="N2" type="Panel" parent="Control/mRNA"]
margin_left = 67.0
margin_right = 142.0
margin_bottom = 80.0
rect_min_size = Vector2( 75, 70 )
custom_styles/panel = SubResource( 12 )
script = ExtResource( 8 )

[node name="N3" type="Panel" parent="Control/mRNA"]
margin_left = 134.0
margin_right = 209.0
margin_bottom = 80.0
rect_min_size = Vector2( 75, 70 )
custom_styles/panel = SubResource( 12 )
script = ExtResource( 8 )

[node name="N4" type="Panel" parent="Control/mRNA"]
margin_left = 201.0
margin_right = 276.0
margin_bottom = 80.0
rect_min_size = Vector2( 75, 70 )
custom_styles/panel = SubResource( 12 )
script = ExtResource( 8 )

[node name="N5" type="Panel" parent="Control/mRNA"]
margin_left = 268.0
margin_right = 343.0
margin_bottom = 80.0
rect_min_size = Vector2( 75, 70 )
custom_styles/panel = SubResource( 12 )
script = ExtResource( 8 )

[node name="N6" type="Panel" parent="Control/mRNA"]
margin_left = 335.0
margin_right = 410.0
margin_bottom = 80.0
rect_min_size = Vector2( 75, 70 )
custom_styles/panel = SubResource( 12 )
script = ExtResource( 8 )

[node name="N7" type="Panel" parent="Control/mRNA"]
margin_left = 402.0
margin_right = 477.0
margin_bottom = 80.0
rect_min_size = Vector2( 75, 70 )
custom_styles/panel = SubResource( 12 )
script = ExtResource( 8 )

[node name="N8" type="Panel" parent="Control/mRNA"]
margin_left = 469.0
margin_right = 544.0
margin_bottom = 80.0
rect_min_size = Vector2( 75, 70 )
custom_styles/panel = SubResource( 12 )
script = ExtResource( 8 )

[node name="GarbageGrid" type="GridContainer" parent="Control"]
margin_left = 573.318
margin_top = 308.661
margin_right = 653.318
margin_bottom = 388.661
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Garbage" type="Panel" parent="Control/GarbageGrid"]
margin_right = 80.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
custom_styles/panel = SubResource( 13 )
script = ExtResource( 8 )

[node name="Sprite" type="Sprite" parent="Control/GarbageGrid/Garbage"]
position = Vector2( 40.1145, 44.3621 )
scale = Vector2( 0.344007, 0.329849 )
texture = ExtResource( 7 )

[node name="SuccessAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 19 )

[node name="FailureAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 18 )

[node name="ClickAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 20 )

[node name="TrashAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 23 )

[node name="KeyboardSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 24 )

[node name="DNA_Strand" type="Sprite" parent="."]
position = Vector2( 682.816, 38.0238 )
scale = Vector2( 0.907681, 0.742298 )
texture = ExtResource( 22 )

[node name="RNA_Strand" type="Sprite" parent="."]
position = Vector2( 683.93, 287.206 )
scale = Vector2( 0.909347, 0.855284 )
texture = ExtResource( 21 )

[node name="FadeBackground" type="ColorRect" parent="."]
visible = false
margin_left = -31.0
margin_top = -19.0
margin_right = 1107.0
margin_bottom = 660.0
color = Color( 0, 0, 0, 0.811765 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SummaryPopUp" type="PopupDialog" parent="." groups=[
"popup",
]]
margin_left = 20.5838
margin_top = 33.3258
margin_right = 458.584
margin_bottom = 584.326
custom_styles/panel = SubResource( 14 )
popup_exclusive = true

[node name="Summary" type="Label" parent="SummaryPopUp"]
margin_left = 76.0
margin_top = 54.0
margin_right = 364.0
margin_bottom = 470.0
custom_fonts/font = SubResource( 15 )
autowrap = true

[node name="Title" type="Label" parent="SummaryPopUp"]
margin_left = 177.729
margin_top = 17.847
margin_right = 254.729
margin_bottom = 46.847
custom_fonts/font = SubResource( 16 )
text = "Summary"

[node name="PageCount" type="Label" parent="SummaryPopUp"]
margin_left = 197.291
margin_top = 489.798
margin_right = 237.291
margin_bottom = 514.798
custom_fonts/font = SubResource( 17 )
align = 1
valign = 1

[node name="Left" type="TextureButton" parent="SummaryPopUp"]
margin_left = 8.031
margin_top = 244.0
margin_right = 48.031
margin_bottom = 283.0
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 11 )
expand = true

[node name="Right" type="TextureButton" parent="SummaryPopUp"]
margin_left = 388.0
margin_top = 244.0
margin_right = 429.0
margin_bottom = 285.0
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 12 )
expand = true

[node name="X" type="TextureButton" parent="SummaryPopUp"]
margin_left = 391.976
margin_top = 20.087
margin_right = 412.976
margin_bottom = 41.087
texture_normal = ExtResource( 26 )
texture_pressed = ExtResource( 25 )
expand = true

[node name="ContinueButton" type="TextureButton" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 853.045
margin_top = 517.958
margin_right = 1025.04
margin_bottom = 602.958
texture_normal = ExtResource( 17 )
texture_pressed = ExtResource( 16 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SummaryButton" type="TextureButton" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 696.868
margin_top = 518.625
margin_right = 868.868
margin_bottom = 603.625
texture_normal = ExtResource( 28 )
texture_pressed = ExtResource( 27 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_down" from="InstructionLabel/LeftInstructionButton" to="." method="_on_LeftInstructionButton_button_down"]
[connection signal="button_down" from="InstructionLabel/RightInstructionButton" to="." method="_on_RightInstructionButton_button_down"]
[connection signal="button_down" from="SummaryPopUp/Left" to="." method="_on_Left_button_down"]
[connection signal="button_down" from="SummaryPopUp/Right" to="." method="_on_Right_button_down"]
[connection signal="button_down" from="SummaryPopUp/X" to="." method="_on_X_button_down"]
[connection signal="button_down" from="ContinueButton" to="." method="_on_TextureButton_button_down"]
[connection signal="button_down" from="SummaryButton" to="." method="_on_SummaryButton_button_down"]

[editable path="Control/Nucleotides/UnMoveable1/Adenine"]

[editable path="Control/Nucleotides/UnMoveable2/Cytosine"]

[editable path="Control/Nucleotides/UnMoveable3/Guanine"]

[editable path="Control/Nucleotides/UnMoveable4/Uracil"]
